--- a/src/containers/usecases/usecases.css
+++ b/src/containers/usecases/usecases.css
@@ -109,6 +109,7 @@
     display: inline-block;
     width: 100px;
     object-fit: contain;
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.8));
 }
 
 .docwire__usecases-single_wrapper_img img:hover {
